--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 	<title>git branches</title>
 	<meta charset="utf-8">
 	<style>
-		h1 ( color: red; )
+		h2 ( color: red; )
 	</style>
 </head>
 <body>
 
-<h1>TEST</h1>
-
-
+	<header>
+		<h2>TEST</h2>
+	</header>
+	
+	<main>
+		<img src="img/wowk.jpg" alt="Вовк">
+	</main>
+	
+</body>
+</html>
