--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 	<title>git branches</title>
 	<meta charset="utf-8">
 	<style>
-		h2 ( color: red; )
+		h2 { color: red; }
 	</style>
 </head>
 <body>
 
 	<header>
-		<h2>TEST</h2>
+		<h2>WOLF</h2>
 	</header>
 	
 	<main>
 		<img src="img/wowk.jpg" alt="Вовк">
 	</main>
+	
+	<footer>&copy</footer>
 	
 </body>
 </html>
